Added line highlighting for complex examples

--- a/presentations/typescript-intro/body.html
+++ b/presentations/typescript-intro/body.html
@@ -253,7 +253,7 @@ const wrongUserRole: UserRole = 'superAdmin'; // FAILS
   <section>
     <h3>When the data is under your full control - use <i>as</i></h3>
 
-    <pre><code class="language-tsx" data-line-numbers>const ammoType = ['7.62', '5.45'];
+    <pre><code class="language-tsx" data-line-numbers="1-5|1|2-4|5">const ammoType = ['7.62', '5.45'];
 const ammoMap = ammoType.reduce((acc, cv) =&gt; {
   acc[cv] = 0;
   return acc;
@@ -263,7 +263,7 @@ const ammoMap = ammoType.reduce((acc, cv) =&gt; {
   <section>
 
     <h3>When data comes from untrusted source - use type guard</h3>
-    <pre><code class="language-typescript" data-line-numbers="">const maybeUser = JSON.parse({ 'userName': 1 });
+    <pre><code class="language-typescript" data-line-numbers="1-11|1|3-5|7-8|9-11">const maybeUser = JSON.parse({ 'userName': 1 });
     
 const isUser = (value: any): value is { userName: string } => 
   typeof value === 'object' && 
