--- a/presentations/react-router/index.html
+++ b/presentations/react-router/index.html
@@ -49,6 +49,7 @@
         <section>
           <h2>Key Points</h2>
           <ul>
+            <li class="fragment fade-up">A cup of theory</li>
             <li class="fragment fade-up">Install react router</li>
             <li class="fragment fade-up">Basic setup</li>
             <li class="fragment fade-up">Data Binding</li>
