Updated talk about react-network

--- a/presentations/react-network/index.html
+++ b/presentations/react-network/index.html
@@ -51,11 +51,21 @@
           <ul>
             <li class="fragment fade-up">Fetch</li>
             <li class="fragment fade-up">Axios</li>
+            <li class="fragment fade-up">Network and store</li>
+            <li class="fragment fade-up">Typical mistakes</li>
           </ul>
         </section>
 
         <include src="./react-network/body.html"></include>
 
+        <section>
+          <h2>Takeaway</h2>
+          <ul >
+            <li class="fragment fade-up">Use fetch for a simple project and axios for middle/large</li>
+            <li class="fragment fade-up">Move logic out of component</li>
+            <li class="fragment fade-up">Don't ignore errors</li>
+          </ul>
+        </section>
 
         
         <section>
