--- a/presentations/react-network/body.html
+++ b/presentations/react-network/body.html
@@ -11,9 +11,12 @@
         <h3>Schema</h3>
 
         <ul>
-            <li>Use <a href="https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API"></a> fetch api to issue an network request</li>
-            <li>Update state on success</li>
-            <li>Handle error if any</li>
+            <li>
+                Use <a href="https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API"></a> fetch api to
+                issue an network request
+            </li>
+            <li class="fragment fade-up">Update state on success</li>
+            <li class="fragment fade-up">Handle error if any</li>
         </ul>
     </section>
 
@@ -24,17 +27,16 @@
     <section>
         <h3>Define a class with an initial state</h3>
 
-        <pre><code data-line-numbers>class FreeApi extends PureComponent {
+        <pre><code data-line-numbers="" class="language-tsx">class FreeApi extends PureComponent {
     state = { errored: false, apis: [] };
 }
             </code></pre>
-
     </section>
 
     <section>
         <h3>On ComponentDidMount implement fetching</h3>
 
-        <pre><code data-line-numbers>async componentDidMount() {
+        <pre><code data-line-numbers="" class="language-tsx">async componentDidMount() {
     try {
         const rawData = await fetch(FREE_API_URL);
         const { entries } = await rawData.json();
@@ -48,9 +50,10 @@
     <section>
         <h3>Render the result</h3>
 
-        <pre><code data-line-numbers>render() {
+        <pre><code data-line-numbers="" class="language-tsx">render() {
     const { apis, errored } = this.state;
-    return errored ? (&lt;div&gt;Something went wrong&lt;/div&gt;) 
+    return errored 
+    ? (&lt;div&gt;Something went wrong&lt;/div&gt;) 
     : &lt;ul&gt;{apis.map(({ API, Link }) =&gt; (
             &lt;li key={Link}&gt;
             {API}::{Link}
@@ -66,7 +69,11 @@
     </section>
 
     <section>
-        <h3>Full <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-cb.tsx">example</a></h3>
+        <h3>
+            Full
+            <a
+                href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-cb.tsx">example</a>
+        </h3>
     </section>
 
     <section>
@@ -80,7 +87,7 @@
 
     <section>
         <h3>Create custom hook with default state</h3>
-        <pre><code data-line-numbers>import { PureComponent, useEffect, useState } from "react";
+        <pre><code data-line-numbers="" class="language-tsx">import { PureComponent, useEffect, useState } from "react";
 
 const useFreeApi = () =&gt; {
   const [data, setApi] = useState({ errored: false, apis: [] });
@@ -92,10 +99,10 @@ const useFreeApi = () =&gt; {
     <section>
         <h3>Add useEffect hook with fetch inside</h3>
 
-        <pre><code class="language-javascript" data-line-numbers>useEffect(() =&gt; {
+        <pre><code class="language-tsx" data-line-numbers="">useEffect(() =&gt; {
     async function updateApi() {
         try {
-          const rawData = await fetch(FREE_API_URL);
+            const rawData = await fetch(FREE_API_URL);
             const { entries } = await rawData.json();
             setApi({ errored: false, apis: entries });
         } catch (error) {
@@ -121,23 +128,26 @@ const useFreeApi = () =&gt; {
 
     <section>
         <h3>Use the new hook as usual</h3>
-        <pre><code data-line-numbers>const FreeApi = () =&gt; {
+        <pre><code data-line-numbers=""  class="language-tsx" >const FreeApi = () =&gt; {
     const { errored, apis } = useFreeApi();
-    return errored ? (&lt;div&gt;Something went wrong&lt;/div&gt;) : (
-        &lt;ul&gt;
-        {apis.map(({ API, Link }) =&gt; (
-            &lt;li key={Link}&gt;
-            {API}::{Link}
-            &lt;/li&gt;
-        ))}
-        &lt;/ul&gt;
-    );
+    return errored 
+        ? (&lt;div&gt;Something went wrong&lt;/div&gt;) 
+        : (&lt;ul&gt;
+            {apis.map(({ API, Link }) =&gt; (
+                &lt;li key={Link}&gt;
+                {API}::{Link}
+                &lt;/li&gt;
+            ))}
+          &lt;/ul&gt;);
 };</code></pre>
     </section>
 
-
     <section>
-        <h3>Full <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-functional.tsx">example</a></h3>
+        <h3>
+            Full
+            <a
+                href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-functional.tsx">example</a>
+        </h3>
     </section>
 
     <section>
@@ -147,12 +157,12 @@ const useFreeApi = () =&gt; {
     <section>
         <h3>Internet Explorer</h3>
 
-        <p class="left">Despite Internet Explorer being deprecated even by the author, it's still popular in a big
-            companies</p>
+        <p class="left">
+            Despite Internet Explorer being deprecated even by the author, it's still popular in a big
+            companies
+        </p>
 
-        <p class="left fragment fade-up"><strong>
-                Fetch doesn't work in IE
-            </strong> </p>
+        <p class="left fragment fade-up"><strong> Fetch doesn't work in IE </strong></p>
     </section>
 
     <section>
@@ -160,10 +170,7 @@ const useFreeApi = () =&gt; {
 
         <p class="left">Sometimes you will need to cancel a request</p>
 
-        <p class="left fragment fade-up"><strong>
-                Fetch doesn't cancel
-            </strong>
-        </p>
+        <p class="left fragment fade-up"><strong> Fetch doesn't cancel </strong></p>
 
         <p class="left fragment fade-up">The work on canceling is ongoing</p>
     </section>
@@ -171,12 +178,7 @@ const useFreeApi = () =&gt; {
     <section>
         <h3>No progress tracking, no timeout</h3>
 
-
-        <p class="left">
-            <strong>
-                Little fetch is a bit limited
-            </strong>
-        </p>
+        <p class="">Fetch is a bit limited</p>
     </section>
 </section>
 
@@ -189,7 +191,7 @@ const useFreeApi = () =&gt; {
         <h3>Axios@0.26.1</h3>
 
         <ul>
-            <li>⭐ 92_000 </li>
+            <li>⭐ 92_000</li>
             <li class="fragment fade-up">Downloads: 28,198,607</li>
             <li class="fragment fade-up">Size: 16kB</li>
         </ul>
@@ -225,7 +227,6 @@ useEffect(() =&gt; {
             </code></pre>
     </section>
 
-
     <section>
         <h3>Differences</h3>
 
@@ -236,9 +237,9 @@ useEffect(() =&gt; {
     </section>
 
     <section>
-        <h3>Global config</h3>
+        <h3>Why to use - global config</h3>
 
-        <pre><code data-line-numbers="">const axios = Axios.create({
+        <pre><code data-line-numbers="" class="language-typescript">const axios = Axios.create({
     baseURL: 'https://some-domain.com/api/',
     timeout: 1000,
     headers: {'X-Custom-Header': 'foobar'}
@@ -247,34 +248,185 @@ useEffect(() =&gt; {
     </section>
 
     <section>
-        <h3>Why to use - Easy to cancel</h3>
+        <h3>Why to use - easy to cancel</h3>
 
-
-        <pre><code data-line-numbers="">const abort = new AbortController();
-useEffect(){
+        <pre><code data-line-numbers="" class="language-tsx">const abort = new AbortController();
+useEffect(()=>{
     try {
-        const { data } = await axios.get(FREE_API_URL, {signal: abort.signal});
+      const { data } = await axios.get(FREE_API_URL, 
+        { signal: abort.signal });
     }
     ...
     return ()=> abort.abort()
-}
+}, [])
+</code></pre>
 
-<p class="left">You can use AbortController or legacy CancelToken</p>
-        </code></pre>
+        <p class="fragment fade-up left">You can use AbortController or legacy CancelToken</p>
     </section>
 
     <section>
-        <h3>Why to use - Interceptors</h3>
+        <h3>Why to use - interceptors</h3>
         <pre><code data-line-numbers>const axios = Axios.create();
 axios.interceptors.response.use((response) =&gt; {
     console.log(response.request.responseURL);
     return response;
 });</code></pre>
-            </code></pre>
     </section>
 
     <section>
-        <h3>Full <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-axios.tsx">example</a></h3>
+        <h3>
+            Full
+            <a
+                href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-axios.tsx">example</a>
+        </h3>
+    </section>
+</section>
+
+<section>
+    <section>
+        <h2>Not OK</h2>
+
+        <p class="left fragment fade-up">
+            There is one big fail in the examples above - the component knows what data it needs (OK), how
+            to get them (not OK) and how to put them to the store (double not OK)
+        </p>
     </section>
 
+    <section>
+        <h3>We need a separations of responsibility</h3>
+
+        <p>The store should be responsible about this stuff</p>
+    </section>
+
+    <section>
+        <h3>Create a store</h3>
+
+        <pre><code data-line-numbers="" class="language-typescript">type ApiData = { 
+    status: "pending" | "failed" | "success"; entries: [] 
+};
+
+class Store {
+    data: ApiData = { status: "pending", entries: [] };
+    constructor() { makeAutoObservable(this); }
+}
+        </code></pre>
+    </section>
+
+    <section>
+        <h3>Create a method that will fetch API</h3>
+
+        <pre><code data-line-numbers="" class="language-typescript">fetchApi() {
+  const abort = new AbortController();
+  axios(FREE_API_URL, { signal: abort.signal })
+    .then(({ data }) => {
+      runInAction(() => (
+        this.data = { status: 'success', entries: data.entries })
+      );
+    })
+    .catch(() => {
+      runInAction(() => (
+        this.data = { status: 'failed', entries: [] })
+      );
+    });
+    return abort;
+}
+        </code></pre>
+    </section>
+
+    <section>
+        <h3>Use from anywhere you need</h3>
+
+        <pre><code class="language-tsx" data-line-numbers>const AppApp = observer(() =&gt; {
+    useEffect(() =&gt; {
+        const request = apiStore.fetchApi();
+        return () =&gt; request.abort();
+    }, []);
+
+    const { status } = apiStore.data;
+
+    if (status ==='pending') { return &lt;&gt;'pending'&lt;/&gt; }
+    if (status === 'failed') { return &lt;&gt;'failed'&lt;/&gt; }
+    return &lt;ApiList/&gt;
+});
+      </code></pre>
+    </section>
+
+    <section>
+        <h3>Pros</h3>
+
+        <ul>
+            <li>Usage simplicity - just call a method</li>
+            <li class="fragment fade-up">Data stored in a one place - caching, logging, is very easy</li>
+            <li class="fragment fade-up">Because of using store - data is accessible anywhere</li>
+        </ul>
+    </section>
+
+</section>
+
+<section>
+    <section>
+        <h2>Typical mistakes</h2>
+    </section>
+
+    <section>
+        <h3>Ignoring errors 💔</h3>
+
+        <p class="fragment fade-uo left">
+            If something might fail - it will fail in the most inconvenient time
+        </p>
+        <p class="fragment fade-uo left">Start designing your component from failed point</p>
+    </section>
+
+    <section>
+        <h3>Ignoring unsubscribe 💔</h3>
+
+        <p class="fragment fade-uo left">
+            Users will not always wait till the end of the call, they might just change the page
+        </p>
+        <p class="fragment fade-uo left">Always provide a way to cancel the network call</p>
+    </section>
+
+    <section>
+        <h3>Using async in effect 💔</h3>
+
+        <pre><code data-line-numbers="">// this will not work
+useEffect(async () => {
+    await fetch(SOME_URL)
+}, []);
+        </code></pre>
+
+        <pre class="fragment fade-up"><code data-line-numbers=""> // but this will
+useEffect(() => {
+    async function myFetch() {
+        await fetch(SOME_URL);
+    }
+    myFetch()
+}, []);                    </code></pre>
+    </section>
+
+    <section>
+        <h3 >Using fetch directly in the code 💔</h3>
+
+        <pre><code class="language-tsx" data-line-numbers>const myApp = () =&gt; {
+    const [data, state] = useState({});
+    // calls BE each render
+    fetch(SOME_URL).then(setState)
+    return &lt;&gt;&lt;/&gt;
+}
+</code></pre>
+    </section>
+
+    <section>
+        <h3>Using fetch without specifying dependency list in use effect 💔</h3>
+        <pre><code class="language-tsx" data-line-numbers>const myApp = () =&gt; {
+    const [data, setState] = useState({});
+
+    useEffect(() =&gt; {
+        // calls BE each render
+        fetch(SOME_URL).then(setState);
+    });
+    return &lt;&gt;&lt;/&gt;;
+};
+          </code></pre>
+    </section>
 </section>
