Added target blank for links

--- a/presentations/react-network/body.html
+++ b/presentations/react-network/body.html
@@ -66,8 +66,8 @@
     <section>
         <h3>
             Full
-            <a
-                href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-cb.tsx">example</a>
+            <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-cb.tsx"
+                target="_blank" rel="noreferrer noopener">example</a>
         </h3>
     </section>
 
@@ -136,7 +136,7 @@ const useFreeApi = () =&gt; {
         <h3>
             Full
             <a
-                href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-functional.tsx">example</a>
+                href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-functional.tsx" target="_blank" rel="noreferrer noopener">example</a>
         </h3>
     </section>
 
@@ -266,8 +266,8 @@ axios.interceptors.response.use((response) =&gt; {
     <section>
         <h3>
             Full
-            <a
-                href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-axios.tsx">example</a>
+            <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-axios.tsx"
+                target="_blank" rel="noreferrer noopener">example</a>
         </h3>
     </section>
 </section>
@@ -374,7 +374,8 @@ class Store {
         <p class="fragment fade-up left">
             Your backend is not something super stable - it might be slow because of many reasons
         </p>
-        <p class="fragment fade-up left">Showing some kind of indication that response is awaited - might be a good idea</p>
+        <p class="fragment fade-up left">Showing some kind of indication that response is awaited - might be a good idea
+        </p>
     </section>
 
 
@@ -406,7 +407,7 @@ useEffect(() => {
     </section>
 
     <section>
-        <h3 >Using fetch directly in the code 💔</h3>
+        <h3>Using fetch directly in the code 💔</h3>
 
         <pre><code class="language-tsx" data-line-numbers>const myApp = () =&gt; {
     const [data, state] = useState({});
