Added a section about what to use

--- a/presentations/react-network/body.html
+++ b/presentations/react-network/body.html
@@ -135,8 +135,8 @@ const useFreeApi = () =&gt; {
     <section>
         <h3>
             Full
-            <a
-                href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-functional.tsx" target="_blank" rel="noreferrer noopener">example</a>
+            <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-functional.tsx"
+                target="_blank" rel="noreferrer noopener">example</a>
         </h3>
     </section>
 
@@ -269,6 +269,26 @@ axios.interceptors.response.use((response) =&gt; {
             <a href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-network/code/fetch-axios.tsx"
                 target="_blank" rel="noreferrer noopener">example</a>
         </h3>
+    </section>
+</section>
+
+<section>
+
+    <section>
+        <h3>What to use?</h3>
+        <ul>
+            <li>
+                Fetch - for a simple project without authentication
+            </li>
+
+            <li>Axios - for anything else</li>
+        </ul>
+    </section>
+
+    <section>
+        <h3>What about other tools like isomorphic fetch? </h3>
+
+        <p>Feel free to use any tool that feet requirements, just ensure it's stable and supported</p>
     </section>
 </section>
 
